css/style.css
html {
	height: 100%;
}

body {
	height: 100%;
	padding-top: 40px;
}

nav, .navbar {
	height: 40px;
	margin-bottom: 0;
	color: #F99E28;
	background-color: #09132e;
	border-bottom: 2px solid #F99E28;
	padding-top: 2px;
}

.navbar-text {
	margin: 8px 5px 0 10px;
}

.pull-left {
	margin: 8px 0 0 10px;
}

.pull-right {
	margin: 17px 10px 0 0;
}
h1 {
	margin: 0;
}

#actionPanel {
	position: relative;
	height: 100%;
	width: 100%;
}

.map-container{
    position: relative;
    height: 100%;
    border: 1px solid white;
}
.map-container .map-canvas{
    position: absolute;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: 0;
    padding: 0;
}

#actionRow {
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0 0 0 5%;
}

#mapColumn {
	height: 100%;
	padding: 7% 5% 7% 0;
}

#infoPane {
	height: 100%;
	padding: 7% 5% 7% 0;
}

#search {
	width: 100%;
}

.carIcon {
	text-align: center;
	background-color: white;
	width: 0;
	padding: .5em;
}

#mapSearch {
	display: table;
}

#mapSearch input {
	border: none;
	border-radius: 0;
}

#mapSearch tr {
	display: table-row;
}

#mapSearch td {
	display: table-cell;
}

#switch {
	text-align: center;
	background-color: white;
}

.origin {
	border-bottom: 2px solid gray;
}

table {
	display: block;
	height: 100%;
	overflow: auto;
	width: 100%;
	margin-bottom: 0;
	border-collapse: collapse;
	padding: 1%;
}

thead, thead tr, thead tr td{
	display: block;
}

.info {
	border: 1px solid white;
}

#directionsTbody, #directionsTr, #directionsTD {
	display: block;
	width: 100%;
}


.adp-directions {
	display: table;
}

.outlook {
	display: table;
}

.outlook td {
	display: table-cell;
}

table {
	background: rgb(255,255,255);
	background: rgba(255,255,255,0.7);
}

.wi {
	color: #F99E28;
}

.weatherBox {
	width: 350px;
	background-color: white;
}

.weatherBoxTitle {
	border-bottom: 3px solid #F99E28;
}

.weatherInfoContainer {
	padding: 1%;
}

.prominentWeather {
	font-size: 5em;
}

.bottom {
	border-top: 2px solid gray;
}

.detailWeather {
	text-align: left;
}

.alert {
	text-align: left;
}

.weatherBoxTitleSpace {
	padding-left: 25%;
}

.weatherBox table{
	display: table;
	text-align: center;
}

.toggleSteps {
	color: #0000EE;
	font-weight: bold;
}

@media screen and (max-width: 480px) {
	body {
		background: url('../images/backgrounds/background-small.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 481px) and (max-width: 640px) {
	body {
		background: url('../images/backgrounds/background-smaller.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 641px) and (max-width: 1024px) {
	body {
		background: url('../images/backgrounds/background-medium.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 1025px) and (max-width: 1280px) {
	body {
		background: url('../images/backgrounds/background-large.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 1281px) and (max-width: 1920px) {
	body {
		background: url('../images/backgrounds/background-larger.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 1921px) {
	body {
		background: url('../images/backgrounds/background.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

